<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_book_cover_photo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/padding_12"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_book_thumbnail_placeholder" />

    <TextView
        android:id="@+id/tv_book_name_title"
        style="@style/book_name_title_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/book_name_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_book_cover_photo" />

    <TextView
        android:id="@+id/tv_book_name_value"
        style="@style/book_name_value_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_14"
        android:text="Jay Bhadrakali book "
        app:layout_constraintBottom_toBottomOf="@id/tv_book_name_title"
        app:layout_constraintStart_toEndOf="@id/tv_book_name_title"
        app:layout_constraintTop_toTopOf="@+id/tv_book_name_title" />


    <TextView
        android:id="@+id/tv_author_name_title"
        style="@style/book_name_title_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_5dp"
        android:text="@string/book_author_name_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_book_name_value" />

    <TextView
        android:id="@+id/tv_author_name_value"
        style="@style/book_name_value_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_author_name_title"
        app:layout_constraintStart_toEndOf="@id/tv_author_name_title"
        app:layout_constraintTop_toTopOf="@+id/tv_author_name_title"
        tools:text="Jay The Karmokar " />


    <TextView
        android:id="@+id/tv_book_price_title"
        style="@style/book_name_title_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_5dp"
        android:text="@string/book_price_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_author_name_value" />

    <TextView
        android:id="@+id/tv_book_price_value"
        style="@style/book_name_value_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_book_price_title"
        app:layout_constraintStart_toEndOf="@id/tv_book_price_title"
        app:layout_constraintTop_toTopOf="@+id/tv_book_price_title"
        tools:text="2 Lakhs" />


    <TextView
        android:id="@+id/tv_book_date_of_issue"
        style="@style/book_name_title_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_5dp"
        android:text="@string/book_date_of_issue_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_book_price_value" />

    <TextView
        android:id="@+id/tv_book_date_of_issue_value"
        style="@style/book_name_value_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_book_date_of_issue"
        app:layout_constraintStart_toEndOf="@id/tv_book_date_of_issue"
        app:layout_constraintTop_toTopOf="@+id/tv_book_date_of_issue"
        tools:text="Centuries Ago...." />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/padding_12"
        android:background="@color/title_txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_book_date_of_issue_value" />

</androidx.constraintlayout.widget.ConstraintLayout>